<?xml version="1.0"?>
<package format="2">
  <name>grid_map_octomap</name>
  <version>1.6.1</version>
  <description>Conversions between grid maps and OctoMap types.</description>
  <maintainer email="pfankhauser@anybotics.com">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="jeffdelmerico@ifi.uzh.ch">Jeff Delmerico</author>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>octomap</depend>
</package>
