<?xml version="1.0"?>
<package format="2">
  <name>grid_map_pcl</name>
  <version>1.6.2</version>
  <description>Conversions between grid maps and Point Cloud Library (PCL) types.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="djud@ethz.ch">Dominic Jud</author>
  <author email="jelavice@ethz.ch">Edo Jelavic</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
